--- a/styles.css
+++ b/styles.css
@@ -34,5 +34,5 @@ body{
 textarea{
     width: 99%;
     min-height: 80%;
-    background-color: bisque;
+    background-color: rgb(207, 175, 135);
 }
